# taxmitra_chatbot

./: .env.sample  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: pylint.yml  python-app.yml  unittest.yml
data/: training_chat_fastfood.txt  training_data.txt
src/: bot_app.py  config.py
storage/: database.sqlite3  dev_db.sqlite3  tax_db.sqlite3
taxmitra/: __main__.py  bot_app.py  config.py
tests/: test_bot.py
